# gnome-mastermind

./: .gitignore  AUTHORS  ChangeLog  ChangeLog.pre-git  INSTALL  MAINTAINERS  Makefile.am  Makefile.in  NEWS  README  README.md  TODO  aclocal.m4  autogen.sh  config.h.in  config.status.lineno  configure  configure.ac  copyright  copyright-artwork  gnome-mastermind.doap  org.autistici.gnome-mastermind.gschema.xml  org.fargiolas.gnome-mastermind.gschema.xml
.github/workflows/: c-cpp.yml
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
desktop/: Makefile.am  Makefile.in  gnome-mastermind.desktop  gnome-mastermind.desktop.in
help/: ChangeLog  Makefile.am  Makefile.in  README4TRANSLATORS  gnome-mastermind.omf.in
help/C/: gnome-mastermind.xml  index.docbook
help/de/: de.po
help/fr/: fr.po
help/id/: id.po
help/it/: it.po
icons/: Makefile.am  Makefile.in
po/: ChangeLog  LINGUAS  POTFILES.in  ar.po  de.po  en_GB.po  es.po  eu.po  fr.po  gnome-mastermind.pot  id.po  it.po  missing  pl.po  pt_BR.po  sv.po
src/: Makefile.am  Makefile.in  gnome-mastermind.c  gnome-mastermind.h  gnome-mastermind.schemas
themes/: Makefile.am  Makefile.am.bk  Makefile.in
ui/: Makefile.am  Makefile.in  menus.ui  ui.gresource.xml  ui.ui  ui.xml
