SUBDIRS = src themes ui po desktop icons

EXTRA_DIST = config.rpath 	\
	    AUTHORS	\
	    BUGS	\
	    COPYING	\
	    copyright   \
	    copyright-artwork \
	    INSTALL	\
	    NEWS	\
	    README	\
	    TODO	\
	    autogen.sh  \
	    configure.ac\
	    intltool-extract.in\
	    intltool-merge.in\
	    intltool-update.in
DISTCLEANFILES = \
	         intltool-extract \
	         intltool-merge \
	         intltool-update

pkgdata_DATA =  AUTHORS    \
	   	BUGS       \
	COPYING    \
	copyright  \
	copyright-artwork \
	NEWS       \
	README     \
	TODO       

ACLOCAL_AMFLAGS = -I m4
